<resources>
    <string name="app_name">miniweb</string>
    <string name="action_settings">设置</string>
    <string name="action_openurl">打开网址</string>
    <string name="action_homepage">主页</string>
    <string name="action_back">后退</string>
    <string name="action_next">前进</string>
    <string name="action_refresh">刷新</string>
    <string name="action_stop">停止</string>
    <string name="action_exit">退出</string>
    <string name="openurl_tip">打开网页</string>
</resources>
