<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    tools:context="com.zhihaofans.miniweb.MainActivity">
    <item
        android:id="@+id/action_openurl"
        android:orderInCategory="100"
        android:title="@string/action_openurl"
        app:showAsAction="never" />
    <item
        android:id="@+id/action_homepage"
        android:orderInCategory="100"
        android:title="@string/action_homepage"
        app:showAsAction="never" />
    <item
        android:id="@+id/action_back"
        android:orderInCategory="100"
        android:title="@string/action_back"
        app:showAsAction="never" />
    <item
        android:id="@+id/action_next"
        android:orderInCategory="100"
        android:title="@string/action_next"
        app:showAsAction="never" />
    <item
        android:id="@+id/action_refresh"
        android:orderInCategory="100"
        android:title="@string/action_refresh"
        app:showAsAction="never" />
    <item
        android:id="@+id/action_stop"
        android:orderInCategory="100"
        android:title="@string/action_stop"
        app:showAsAction="never" />
    <item
        android:id="@+id/action_settings"
        android:orderInCategory="100"
        android:title="@string/action_settings"
        app:showAsAction="never" />
    <item
        android:id="@+id/action_exit"
        android:orderInCategory="100"
        android:title="@string/action_exit"
        app:showAsAction="never" />
</menu>
